# Rchimerism

./: .gitignore  README.md
converter/: pyproject.toml
converter/src/genemapper_converter/: __main__.py  autodetect.py  converter.py  models.py  parser.py  writer.py
converter/tests/unit/: conftest.py  test_autodetect.py  test_cli.py  test_converter.py  test_parser.py  test_writer.py
example/convertedExample/: ddata.txt  rdata.txt  sdata.txt
source/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE
source/R/: app.R  chiDD.R  chiSD.R  constants.R  genemapper.R  locDD.R  locSD.R  server.R  ui.R  utils.R  validation.R
source/inst/extdata/: globalfiler_markers.csv
source/tests/: testthat.R
source/tests/testthat/: helper.R  test_chiDD.R  test_chiSD.R  test_genemapper.R  test_integration.R  test_locDD.R  test_locSD.R
